; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_inet.c_mac_netinet_tcp_reply.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_inet.c_mac_netinet_tcp_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.label = type { i32 }

@mac_policy_count = common dso_local global i64 0, align 8
@netinet_tcp_reply = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_netinet_tcp_reply(%struct.mbuf* %0) #0 {
  %2 = alloca %struct.mbuf*, align 8
  %3 = alloca %struct.label*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %2, align 8
  %4 = load i64, i64* @mac_policy_count, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %14

7:                                                ; preds = %1
  %8 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %9 = call %struct.label* @mac_mbuf_to_label(%struct.mbuf* %8)
  store %struct.label* %9, %struct.label** %3, align 8
  %10 = load i32, i32* @netinet_tcp_reply, align 4
  %11 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %12 = load %struct.label*, %struct.label** %3, align 8
  %13 = call i32 @MAC_POLICY_PERFORM_NOSLEEP(i32 %10, %struct.mbuf* %11, %struct.label* %12)
  br label %14

14:                                               ; preds = %7, %6
  ret void
}

declare dso_local %struct.label* @mac_mbuf_to_label(%struct.mbuf*) #1

declare dso_local i32 @MAC_POLICY_PERFORM_NOSLEEP(i32, %struct.mbuf*, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
